--- a/MVCApp3/MVCApp3/MVCApp3.csproj
+++ b/MVCApp3/MVCApp3/MVCApp3.csproj
@@ -92,8 +92,13 @@
     <Content Include="Web.config" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="App_Start\FilterConfig.cs" />
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="Controllers\HomeController.cs" />
+    <Compile Include="Filters\SampleActionFilterAttribute.cs" />
+    <Compile Include="Filters\SampleAuthorizationFilterAttribute.cs" />
+    <Compile Include="Filters\SampleExceptionFilterAttribute.cs" />
+    <Compile Include="Filters\SampleResultFilterAttribute.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
